[package]
name = "libh3"
version = "0.1.8"
authors = ["Rusty Conover <rusty@conover.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rustyconover/libh3.git"
description = "Safe Rust Bindings to Uber's Hexagonal Hierarchical Spatial Index - H3"

[dependencies]
libh3-sys = "0.1.3"
float-cmp = "0.9.0"
derive_more = {version = "0.99.17", default-features = false, features = ["deref", "from", "into"] }
